force-app/main/default/objects/Unidad_arreglo__c/Unidad_arreglo__c.object-meta.xml
<CustomObject>
    <label>Arreglo</label>
    <nameField>
        <label>Nombre de Unidad arreglo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Arreglos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>