force-app/main/default/objects/Unidad_arreglo__c/fields/Factura__c.field-meta.xml
<CustomField>
    <fullName>Factura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factura</label>
    <referenceTo>Factura__c</referenceTo>
    <relationshipLabel>Arreglos</relationshipLabel>
    <relationshipName>Arreglos</relationshipName>
    <type>Lookup</type>
</CustomField>