force-app/main/default/objects/Unidad_arreglo__c/fields/Fecha_solucion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_solucion__c</fullName>
    <label>Fecha solucion</label>
    <type>Date</type>
</CustomField>