force-app/main/default/objects/Unidad_arreglo__c/fields/Resuelto__c.field-meta.xml
<CustomField>
    <fullName>Resuelto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resuelto</label>
    <type>Checkbox</type>
</CustomField>