force-app/main/default/objects/Unidad_arreglo__c/fields/Unidad__c.field-meta.xml
<CustomField>
    <fullName>Unidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidad</label>
    <referenceTo>Unidad__c</referenceTo>
    <relationshipLabel>Arreglos</relationshipLabel>
    <relationshipName>Arreglos</relationshipName>
    <type>Lookup</type>
</CustomField>